[project]
name = "Dagster_Test"
requires-python = ">=3.10,<3.15"
version = "0.1.0"
dependencies = [
    "dagster","snowflake-connector-python",
    "dagster-cloud>=1.12.11",
]

[dependency-groups]
dev = [
    "dagster-webserver",
    "dagster-dg-cli",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
force-include = { "pyproject.toml" = "pyproject.toml" }

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "Dagster_Test"
registry_modules = [
    "Dagster_Test.components.*",
]


